--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "repository": "git://github.com/geek/lab-jslint",
   "main": "lib/index.js",
+  "bin": "bin/lab-jslint",
   "keywords": [
     "test",
     "lint"
